--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 
 </head>
 <body>
-hej Lechia gol - pozdrawiam Agate i Michala i Karola
+hej Arka gol - pozdrawiam Agate i Michala i Karola
 </body>
 </html
