--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 </head>
 <body>
-hej Lechia gol - pozdrawiam Agate i Michala i Karola
+hej Chojniczanka gol - pozdrawiam Agate i Michala i Karola
+
+Test żółwiowego komita
 </body>
 </html
