add some tags :D

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
 <head>
-
+    
 </head>
 <body>
-hej Chojniczanka gol - pozdrawiam Agate i Michala i Karola
+<h1>hej Chojniczanka gol</h1> 
+<h2>Pozdrawiam Agate i Michala i Karola</h2>
 
-Test żółwiowego komita
+<span>Test żółwiowego komita</span>
+
 </body>
 </html
