--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="">
 <head>
-    
+    <meta charset="UTF-8">
+    <title>Game Title Here</title>
+    <script src="js/phaser.min.js">  
+    </script>
+    <script src="js/main.js"></script>
+    <script src="js/sceneMain.js"></script>
 </head>
 <body>
-<h1>hej Chojniczanka gol</h1> 
-<h2>Pozdrawiam Agate i Michala i Karola</h2>
 
-<span>Test żółwiowego komita</span>
+<div>TU BEDZIE GRA:</div>
+<div id='phaser-game'></div>
 
 </body>
-</html
+</html>
