--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div>TU BEDZIE GRA:</div>
 <div id='phaser-game'></div>
 <button class="btn btn-primary">Go go power rangers</button>
-<button class="btn btn-primary">Pozdrawiam</button>
+<button class="btn btn-secondary">Pozdrawiam</button>
 
 </body>
 </html>
