--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/phaser.min.js">  
     </script>
     <script src="js/main.js"></script>
+    <script src="js/powerplant.js"></script>
     <script src="js/sceneMain.js"></script>
     <script src="js/fontLoader.js"></script>
 </head>
