--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="js/consts.js"></script>
     <script src="js/powerplant.js"></script>
     <script src="js/sceneMain.js"></script>
+    <script src="js/menuScene.js"></script>
     <script src="js/fontLoader.js"></script>
 </head>
 <body>
