--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/powerplant.js"></script>
     <script src="js/sceneMain.js"></script>
     <script src="js/sceneMenu.js"></script>
+    <script src="js/sceneGameOver.js"></script>
     <script src="js/fontLoader.js"></script>
 </head>
 <body>
