--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </script>
     <script src="js/main.js"></script>
     <script src="js/consts.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/powerplant.js"></script>
     <script src="js/sceneMain.js"></script>
     <script src="js/sceneMenu.js"></script>
