--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="js/sceneLeaderboard.js"></script>
     <script src="js/fontLoader.js"></script>
 </head>
-<body>
+<body style="background: #000;">
 
 <div style="text-align:center;" id='phaser-game'></div>
 
